syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup.academy.caio";
option java_outer_classname = "ChavePix";

package br.com.zup.academy.caio;

service CriaChaveService {

  rpc registrarChave(CadastraChaveRequest) returns (CadastraChaveResponse) {}
}

service ExcluiChaveService {

  rpc excluirChave(ExclusaoChaveRequest) returns (ExclusaoChaveResponse) {}
}

service ConsultaChaveService {

  rpc consultarChave(ConsultaChaveRequest) returns (ConsultaChaveResponse) {}
}

service ConsultaTodasChaves {

  rpc listarTodas(ListaChavesRequest) returns (ListaChavesResponse) {}
}

enum TipoChave{
  CHAVE_DESCONHECIDA = 0;
  CPF = 1;
  CELULAR = 2;
  EMAIL = 3;
  CHAVE_ALEATORIA = 4;
}

enum TipoConta{
  CONTA_DESCONHECIDA = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;
}

message CadastraChaveRequest{
  string codigoInterno = 1;
  TipoChave tipoChave = 2;
  string valor = 3;
  TipoConta tipoConta = 4;
}

message CadastraChaveResponse{
  string clienteId = 1;
  string pixId = 2;
}

message ExclusaoChaveRequest{
  string pixId = 1;
  string clienteId = 2;
}

message ExclusaoChaveResponse{
  string response = 1;
}

message ConsultaChaveRequest{

  message ClienteId{
    string clienteId = 1;
    string pixId = 2;
  }

  oneof Filtro{
    ClienteId clienteId = 1;
    string chave = 2;
  }

}

message ConsultaChaveResponse{
  string pixId = 1;
  string clienteId = 2;
  string tipoChave = 3;
  string valor = 4;
  string nome = 5;
  string cpf = 6;
  string instituicaoFinanceira = 7;
  string agencia = 8;
  string numero = 9;
  string tipoConta = 10;
  string criadoEm = 11;
}

message ListaChavesRequest{
  string clienteId = 1;
}

message ListaChavesResponse{

  message Chave{
    string pixId = 1;
    string clienteId = 2;
    string tipoChave = 3;
    string valor = 4;
    string tipoConta = 5;
    string criadoEm = 6;
  }

  repeated Chave chaves = 1;
}

